<resources>
    <string name="app_name">ChatH2O</string>
    <string name="login">Đăng nhập</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="username">Tên hiển thị</string>
    <string name="register">Đăng ký</string>
    <string name="repeat_password">Nhập lại mật khẩu</string>
    <string name="password">Mật khẩu</string>
    <string name="about">About</string>
    <string name="logout">Đăng xuất</string>
    <string name="email">Email</string>
    <string name="enter_group_name">Tên nhóm</string>
    <string name="addFriends">Add friend</string>
    <string name="title_list_users">List User</string>
    <string name="no_user">User not found</string>
</resources>
