<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">



    <FrameLayout
        android:layout_width="320dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:paddingTop="30dp">





        <androidx.cardview.widget.CardView
            android:id="@+id/cv_add"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/register"
                    android:textColor="@color/editTextColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">


                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/et_bg"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="10dp"
                        android:textColor="@color/editTextColor"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">


                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/et_bg"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="10dp"
                        android:textColor="@color/editTextColor"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">


                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:paddingLeft="10dp"
                            android:background="@drawable/et_bg"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textColor="@color/editTextColor"
                            android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">

                        <EditText
                            android:id="@+id/et_repeatpassword"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:background="@drawable/et_bg"
                            android:hint="@string/repeat_password"
                            android:paddingLeft="10dp"
                            android:inputType="textPassword"
                            android:textColor="@color/editTextColor"
                            android:textSize="13sp" />
                </LinearLayout>

                <!--android:stateListAnimator="@drawable/state_list_animator_z"-->
                <Button
                    android:id="@+id/bt_go"
                    android:layout_width="135dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_gradient_bordered"
                    android:text="@string/register"
                    android:textColor="#fff"
                    android:onClick="clickRegister"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:onClick="clickBackLogin"
            android:src="@drawable/ic_signup"
            android:transitionName="loginFab"
            app:fabSize="normal" />
    </FrameLayout>


</RelativeLayout>
